Final notes changes and ReadMe file started

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <!--Another line break-->
             <br>
             <!--Div to hold the button for generating password-->
-            <div>
+            <div class = "buttons">
                 <button class="makePW">Generate Password</button>
+                <!-- <button class="changeTheme">Change Theme</button> -->
             </div>
         </div>
     </section>
