Added ReadMe Images final fixes to CSS for change theme

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!--Div to hold the button for generating password-->
             <div class = "buttons">
                 <button class="makePW">Generate Password</button>
-                <!-- <button class="changeTheme">Change Theme</button> -->
+                <button class="changeTheme">Change Theme</button>
             </div>
         </div>
     </section>
